RESOLVED FIXED192651
REGRESSION (r238090): CAPCHA UI jumps to the wrong location
https://bugs.webkit.org/show_bug.cgi?id=192651
Summary REGRESSION (r238090): CAPCHA UI jumps to the wrong location
Simon Fraser (smfr)
Reported 2018-12-12 18:57:09 PST
REGRESSION (r238090): CAPCHA UI jumps to the wrong location
Attachments
Patch (7.08 KB, patch)
2018-12-12 19:00 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2018-12-12 19:00:31 PST
Simon Fraser (smfr)
Comment 2 2018-12-12 19:00:33 PST
WebKit Commit Bot
Comment 3 2018-12-12 20:46:33 PST
Comment on attachment 357201 [details] Patch Clearing flags on attachment: 357201 Committed r239150: <https://trac.webkit.org/changeset/239150>
WebKit Commit Bot
Comment 4 2018-12-12 20:46:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.